# iuc-automationshorna

./: .gitignore  README.md  pyproject.toml  run_app.sh
devtools/: args.yaml  train_val_split.py  train_yolo.py
devtools/tests/: end-to-end-test.sh
devtools/tests/broker/: docker-compose.yml
devtools/training/: args.yaml  test_model.py  train_val_split.py  train_yolo.py
mqtt_testing/: mqtt_publisher.py  mqtt_subscriber.py
src/: camera.py  config.py  inference.py  logger.py  main.py  utils.py
