[project]
name = "iuc-demo"
version = "0.1.0"
description = "Demo application for IUC Syd's 'automationshörna', a demo area showcasing industrial automation techniques. Integrated with Intelligent Bridge's gateway through MQTT."
authors = [
  {name = "Petter Melander", email = "petter.melander@nordaxon.com"},
]
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "numpy==1.26",
    "paho-mqtt>=2.1.0",
    "python-dotenv>=1.0.1",
    "ultralytics>=8.3.23",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = true
